code-executor/deployement.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: executor
spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: executor
    spec:
      containers:
      - name: executor
        image: #TODO:
        ports:
          containerPort: 3001
        resources:
          limits:
            memory: 128Mi
            cpu: 300m
