code-executor/executor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: executor
  labels:
    group: executor
spec:
  type: ClusterIP
  selector:
    app: executor
  ports:
    - port: 3001
      targetPort: 3001
