code-executor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: executor
spec:
  ports:
    - port: 80
      targetPort: 3001
  selector:
    app: executor
  type: LoadBalancer
